[gd_scene load_steps=25 format=3 uid="uid://cdmghfmx74sd3"]

[ext_resource type="Script" path="res://jeu.gd" id="1_sp1r3"]
[ext_resource type="SpriteFrames" uid="uid://wymmannlca2h" path="res://Visuel/corps.res" id="2_8ij2y"]
[ext_resource type="SpriteFrames" uid="uid://b6evec1t4pifj" path="res://Visuel/vetements.res" id="3_uge7q"]
[ext_resource type="SpriteFrames" uid="uid://btom6trmjdukk" path="res://Visuel/oreilles.res" id="4_vpaoq"]
[ext_resource type="SpriteFrames" uid="uid://4bswtwch67oq" path="res://Visuel/tetes.res" id="5_c7qfc"]
[ext_resource type="SpriteFrames" uid="uid://da67jk2exmr33" path="res://Visuel/yeux.res" id="6_1oq6k"]
[ext_resource type="SpriteFrames" uid="uid://o8tcy8nv6kfq" path="res://Visuel/yeux_couleurs.res" id="7_eygd1"]
[ext_resource type="SpriteFrames" uid="uid://kv3wtpil2f6" path="res://Visuel/nez.res" id="8_6s3rm"]
[ext_resource type="SpriteFrames" uid="uid://chrdc1dwgoa2t" path="res://Visuel/bouches.res" id="9_s0sae"]
[ext_resource type="SpriteFrames" uid="uid://coswm6ib42uhs" path="res://Visuel/cheveux.res" id="10_j86qu"]
[ext_resource type="SpriteFrames" uid="uid://c7b8p6011e1w6" path="res://Visuel/accessoires.res" id="11_twxa0"]
[ext_resource type="AudioStream" uid="uid://bp7c2v5mguosl" path="res://audio/oksound.wav" id="12_2d2df"]
[ext_resource type="PackedScene" uid="uid://beoofw6gnd2vs" path="res://croco_panel.tscn" id="12_enyp4"]
[ext_resource type="AudioStream" uid="uid://bdiri8oph6e55" path="res://audio/oksound2.wav" id="13_613sa"]
[ext_resource type="AudioStream" uid="uid://bavpnif7yegqs" path="res://audio/zap.wav" id="13_h18yl"]
[ext_resource type="AudioStream" uid="uid://wtfv32b4m8by" path="res://audio/fail.wav" id="13_s5uoj"]
[ext_resource type="AudioStream" uid="uid://cm4iehsv1kj1f" path="res://audio/oksound3.wav" id="14_sjjwl"]
[ext_resource type="AudioStream" uid="uid://bog0hyu3cd6bo" path="res://audio/zap2.wav" id="15_nylsa"]
[ext_resource type="AudioStream" uid="uid://cifpqckuq717q" path="res://audio/zap3.wav" id="16_qlemp"]
[ext_resource type="AudioStream" uid="uid://dbrf54gr4tq4h" path="res://audio/full.wav" id="19_pr61v"]
[ext_resource type="AudioStream" uid="uid://b5j4y7xvheluf" path="res://audio/casting_theme.wav" id="20_cwtt4"]
[ext_resource type="PackedScene" uid="uid://bo7hg4bprd4bg" path="res://plateau.tscn" id="21_fxvn6"]
[ext_resource type="PackedScene" uid="uid://2mv4y17rnlb4" path="res://bonhomme_basic.tscn" id="22_cw1ek"]
[ext_resource type="Script" path="res://bonhomme_arrive.gd" id="23_jj3ad"]

[node name="jeu" type="Node2D"]
script = ExtResource("1_sp1r3")

[node name="bonhomme" type="Node2D" parent="."]
position = Vector2(401, 350)
scale = Vector2(0.505, 0.505)

[node name="Corps" type="Node2D" parent="bonhomme"]
position = Vector2(-233, 64)

[node name="peau" type="AnimatedSprite2D" parent="bonhomme/Corps"]
modulate = Color(0.368627, 0.462745, 1, 1)
sprite_frames = ExtResource("2_8ij2y")

[node name="vetements" type="AnimatedSprite2D" parent="bonhomme/Corps"]
sprite_frames = ExtResource("3_uge7q")
frame = 2

[node name="Face" type="Node2D" parent="bonhomme"]
position = Vector2(-228, -182)
scale = Vector2(0.615, 0.615)

[node name="oreilles" type="AnimatedSprite2D" parent="bonhomme/Face"]
sprite_frames = ExtResource("4_vpaoq")
frame = 8

[node name="tete" type="AnimatedSprite2D" parent="bonhomme/Face"]
sprite_frames = ExtResource("5_c7qfc")
frame = 8

[node name="yeux" type="AnimatedSprite2D" parent="bonhomme/Face"]
position = Vector2(0, -99)
scale = Vector2(0.455, 0.455)
sprite_frames = ExtResource("6_1oq6k")
frame = 8

[node name="yeux_couleur" type="AnimatedSprite2D" parent="bonhomme/Face"]
modulate = Color(0.184314, 0.756863, 0.827451, 1)
position = Vector2(0, -99)
scale = Vector2(0.455, 0.455)
sprite_frames = ExtResource("7_eygd1")
frame = 5

[node name="nez" type="AnimatedSprite2D" parent="bonhomme/Face"]
position = Vector2(0, -15)
scale = Vector2(0.2, 0.2)
sprite_frames = ExtResource("8_6s3rm")
frame = 1

[node name="bouche" type="AnimatedSprite2D" parent="bonhomme/Face"]
position = Vector2(0, 50)
scale = Vector2(0.305, 0.305)
sprite_frames = ExtResource("9_s0sae")
frame = 5

[node name="cheveux" type="AnimatedSprite2D" parent="bonhomme/Face"]
modulate = Color(1, 0.321569, 1, 1)
position = Vector2(0, -19)
scale = Vector2(1.29, 1.29)
sprite_frames = ExtResource("10_j86qu")
frame = 9

[node name="Accessoires" type="Node2D" parent="bonhomme"]

[node name="accessoires1" type="AnimatedSprite2D" parent="bonhomme/Accessoires"]
position = Vector2(-379.245, 118.868)
scale = Vector2(0.31, 0.31)
sprite_frames = ExtResource("11_twxa0")
frame = 16

[node name="accessoires2" type="AnimatedSprite2D" parent="bonhomme/Accessoires"]
position = Vector2(-116.981, 118.868)
scale = Vector2(0.31, 0.31)
sprite_frames = ExtResource("11_twxa0")
frame = 16

[node name="Timer_game" type="Timer" parent="."]
one_shot = true

[node name="UICHEAP" type="Node2D" parent="."]
position = Vector2(140, -121)

[node name="ColorRect" type="ColorRect" parent="UICHEAP"]
offset_left = 494.0
offset_top = 139.0
offset_right = 903.0
offset_bottom = 459.0

[node name="bouton_jaune" type="Button" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 121.0
offset_right = 157.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0.960784, 0.811765, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 46
text = "JAUNE"

[node name="bouton_orange" type="Button" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 200.0
offset_top = 121.0
offset_right = 399.0
offset_bottom = 193.0
theme_override_colors/font_color = Color(0.960784, 0.305882, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 46
text = "ORANGE"

[node name="bouton_rejet" type="Button" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 86.0
offset_top = 28.0
offset_right = 285.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.960784, 0.00392157, 0.0313726, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 46
text = "REJET"

[node name="jaune_label" type="Label" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 37.0
offset_top = 192.0
offset_right = 121.0
offset_bottom = 242.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "fsdfs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="orange_label" type="Label" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 249.0
offset_top = 193.0
offset_right = 355.0
offset_bottom = 243.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "fsdfsd"
horizontal_alignment = 1
vertical_alignment = 1

[node name="time_label" type="Label" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 34.0
offset_top = 263.0
offset_right = 370.0
offset_bottom = 313.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "rwerwer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_vies" type="Label" parent="UICHEAP/ColorRect"]
layout_mode = 0
offset_left = 26.0
offset_top = 235.0
offset_right = 382.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(0, 0.945098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 31
text = "VIES VIES VIES VIES VIES "
horizontal_alignment = 1
vertical_alignment = 1

[node name="croco_panel" parent="UICHEAP" instance=ExtResource("12_enyp4")]
position = Vector2(269, 452)
scale = Vector2(0.49, 0.49)

[node name="Audio" type="Node2D" parent="."]

[node name="audio_ok" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_2d2df")

[node name="audio_ok2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_613sa")

[node name="audio_ok3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("14_sjjwl")

[node name="audio_fail" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_s5uoj")

[node name="audio_zap" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_h18yl")

[node name="audio_zap2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("15_nylsa")

[node name="audio_zap3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("16_qlemp")

[node name="audio_full" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("19_pr61v")

[node name="audio_win" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("19_pr61v")

[node name="audio_musique" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("20_cwtt4")
autoplay = true

[node name="bonhomme_basic" parent="." instance=ExtResource("22_cw1ek")]
position = Vector2(-152, 300)
script = ExtResource("23_jj3ad")

[node name="spawn_node" type="Node2D" parent="."]

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="plateau" parent="." instance=ExtResource("21_fxvn6")]
visible = false
position = Vector2(3, -1)

[connection signal="timeout" from="Timer_game" to="." method="_on_timer_game_timeout"]
[connection signal="pressed" from="UICHEAP/ColorRect/bouton_jaune" to="." method="_on_bouton_jaune_pressed"]
[connection signal="pressed" from="UICHEAP/ColorRect/bouton_orange" to="." method="_on_bouton_orange_pressed"]
[connection signal="pressed" from="UICHEAP/ColorRect/bouton_rejet" to="." method="_on_bouton_rejet_pressed"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
